--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,11 +47,11 @@ jobs:
       fail-fast: false
       matrix:
         base_image_flavor: [main, asus, framework, surface]
-        base_name: [bazzite, bazzite-deck, bazzite-nvidia]
+        base_name: [bazzite, bazzite-deck, bazzite-nvidia, bazzite-deck-blob]
         base_image_name: [kinoite, silverblue]
-        major_version: [39]
+        major_version: [rawhide]
         include:
-          - major_version: 39
+          - major_version: rawhide
             is_latest_version: true
             is_stable_version: true
         exclude:
