--- a/boot_menu.yml
+++ b/boot_menu.yml
@@ -1,4 +1,9 @@
 ublue_variants:
+  - label: ublue-os/bazzite-deck-blob
+    ks: /kickstart/ublue-os-deck.ks
+    flavors:
+      - label: bazzite-deck
+        info: Bazzite (Steam Deck & HTPC Blob Edition)
   - label: ublue-os/bazzite
     ks: /kickstart/ublue-os.ks
     flavors:
