--- a/boot_menu.yml
+++ b/boot_menu.yml
@@ -2,7 +2,7 @@ ublue_variants:
   - label: ublue-os/bazzite-deck-blob
     ks: /kickstart/ublue-os-deck.ks
     flavors:
-      - label: bazzite-deck
+      - label: bazzite-deck-blob
         info: Bazzite (Steam Deck & HTPC Blob Edition)
   - label: ublue-os/bazzite
     ks: /kickstart/ublue-os.ks
