--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -31,7 +31,7 @@ jobs:
       fail-fast: false
       matrix:
         image_name: [bazzite, bazzite-nvidia, bazzite-gnome, bazzite-gnome-nvidia, bazzite-deck, bazzite-deck-gnome, bazzite-deck-blob, bazzite-ally, bazzite-ally-gnome, bazzite-asus, bazzite-gnome-asus, bazzite-asus-nvidia, bazzite-gnome-asus-nvidia]
-        major_version: [rawhide]
+        major_version: [39]
         image_tag: [stable]
     steps:
       - name: Set EXTRA_BOOT_PARAMS
