--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
       fail-fast: false
       matrix:
         base_image_flavor: [main, asus, framework, surface]
-        base_name: [bazzite, bazzite-deck, bazzite-nvidia, bazzite-deck-blob]
+        base_name: [bazzite-deck-blob]
         base_image_name: [kinoite, silverblue]
         major_version: [39]
         include:
