--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,8 +46,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        base_image_flavor: [main, asus, framework, surface]
-        base_name: [bazzite-deck-blob]
+        base_image_flavor: [main]
+        base_name: [bazzite-deck]
         base_image_name: [kinoite, silverblue]
         major_version: [39]
         include:
